k8s/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: rps-test

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - report_service
                - -d
                - report_service
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - report_service
                - -d
                - report_service
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-data
