k8s/base/report-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: report-service
  namespace: rps-test

spec:
  replicas: 1

  selector:
    matchLabels:
      app: report-service

  template:
    metadata:
      labels:
        app: report-service

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: report-service
          image: ghcr.io/freqj/rps-test:COMMIT_TAG
          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
