k8s/base/report-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: report-service
  namespace: rps-test

spec:
  selector:
    app: report-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
