k8s/base/report-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: report-service
  namespace: rps-test

spec:
  ingressClassName: nginx

  rules:
    - host: report.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 8080
